26Sep02=======================================================================
1. added WWV and WCY to the Mrtg stats. Don't forget to do an indexmaker!
25Sep02=======================================================================
1. added mrtg stuff to the system as a template. In order to use this you
must install mrtg onto your system and copy all the mrtg files (or at least
all the images) to new directory /spider/html/mrtg. The system generates the
config file for you as part of its workings. To get it to update add a line
to your spider crontab like: 

00,05,10,15,20,25,30,35,40,45,50,55 * * * * run_cmd('mrtg all')

You will also need to do an indexmaker once in the html directory. I put the 
index page into /spider/html/mrtg/stats.html YMMV. I do:

indexmaker --output stats.html --columns=1 --title "MRTG statistics for 
GB7DJK" ../../mrtg/mrtg.cfg

But all on one line.
2. I have made a technical change to the way ax25 connects outward on unix 
boxes are done. I currently have no way of testing this. I think it still 
works.
22Sep02=======================================================================
1. Add changes to the installation manual for Windows users from K1XX
21Sep02=======================================================================
1. make some detail changes for connects out in Msg.pm
17Sep02=======================================================================
1. Added shu command for Charlie's (K1XX) benefit (together with the rest of
our butterfingered sysops) who miss the '/' out of sh/u frequently enough 
to curse. 'shu' simply types out a message saying 'type SHUT' to shutdown the
node. Added 'shu' to /spider/perl/Messages. No need to restart, just 
load/mess and load/alias after doing a CVS.
21Aug02=======================================================================
1. added 'warc' and 'contesthf' to the regions in bands.pl (K1XX).
20Aug02=======================================================================